# LincedIn-TallerII-Server

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  params.json  setting.json  wrong.json  wronglevel.json
.temp-test/: example.json  setting-model.json  testdb.json
.temp-test/Chat/: 000027.ldb  000034.ldb  000041.ldb  000043.ldb  000048.ldb  000051.ldb  LOG  LOG.old  MANIFEST-000050
.temp-test/User/: LOG  LOG.old
.temp-test/someDB/: LOG.old
.temp-test/test/: 000035.ldb  000037.ldb  000039.ldb  LOG  LOG.old  MANIFEST-000036
config/: CMakeLists.txt  LincedInServerConfig.h.in
config/cmake_modules/: CodeCoverage.cmake
config/extern_libraries/jwt/: CMakeLists.txt
config/extern_libraries/jwt/libjwt/: jwt.c
db/User/: LOG.old
docs/: CMakeLists.txt  Doxyfile  conf.py.in  index.rst
docs/RESTful_API/: RESTful_API_doc_swagger.yml  RestfulAPI_doc_swagger_markdown.md
docs/database/: README.md
resources/: README.md
scripts/: IndexUserDatabase.cpp
settings/: setting.json
src/: AppInitializer.cpp
src/main/: AppInitializer.cpp
src/main/Json/json/: jsoncpp.cpp
src/main/Logger/: Logger.cpp  Logger.h
src/main/MongooseServer/: Server.cpp  Server.h
src/main/Util/: Util.cpp  Util.h
src/main/Utils/: DateUtils.cpp  DateUtils.h  PathUtils.cpp  PathUtils.h  StringUtils.cpp  StringUtils.h  VectorUtils.cpp  VectorUtils.h
src/main/headers/exception/: AccessException.h  AppServerException.h  ChatException.h  DBManagerException.h  InvalidChatParticipants.h  JobException.h  SkillException.h  TokenException.h  UserException.h
src/main/headers/model/: Chat.h  Education.h  Friends.h  Geolocalization.h  Image.h  Job.h  JobPosition.h  Recomendation.h  Recommendation.h  Skill.h  User.h  UserActivity.h
src/main/headers/services/Access/: AccessLog.h  AccessToken.h
src/main/headers/services/DB/: DB.h  DBManager.h  DBs.h
src/main/headers/services/ExternLogin/: FacebookAPI.h
src/main/headers/services/Firebase/: FirebaseClient.h
src/main/headers/services/HTTP/: HTTPRequestHandler.h  HTTPResponseConstants.h
src/main/headers/services/HTTP/Message/: HTTPMessageBuilder.h  HTTPRequest.h  HTTPResponse.h
src/main/headers/services/Handlers/: ChatHandler.h  DefaultHandler.h  FriendHandler.h  GeolocalizationHandler.h  Handler.h  HelloWorldJsonHandler.h  ImagesHandler.h  LoginHandler.h  RecommendationHandler.h  SearchHandler.h  SharedServerHandler.h  UserHandler.h
src/main/headers/services/Indexer/: UsersIndexer.h
src/main/headers/services/Logger/: Logger.h
src/main/headers/services/Objects/: Job.h  Skill.h  User.h
src/main/headers/services/Search/: ElasticClient.h
src/main/headers/services/Searcher/: ElasticClient.h
src/main/headers/services/Server/: Server.h  ServerClient.h
src/main/headers/services/SharedServerAPI/: SharedServerAPI.h
src/main/headers/settings/: SettingManager.h
src/main/headers/utils/: DateUtils.h  ErrorMessage.h  GeoUtils.h  JSONUtils.h  PathUtils.h  StringUtils.h  ThreatUtils.h  TokenUtils.h  VectorUtils.h
src/main/service/HTTP/: HTTPRequestHandler.cpp  HTTPRequestHandler.h
src/main/service/HTTP/Message/: HTTPMessageBuilder.cpp  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h
src/main/service/Handlers/: DefaultHandler.cpp  DefaultHandler.h  Handler.h  HelloWorldJsonHandler.cpp  HelloWorldJsonHandler.h  SharedServerHandler.cpp  SharedServerHandler.h
src/main/service/Logger/: Logger.cpp  Logger.h
src/main/service/MongooseServer/: HTTPEndPoints.cpp  HTTPEndPoints.h  HTTPRequest.cpp  HTTPRequest.h  HTTPRequestHandler.cpp  HTTPRequestHandler.h  Server.cpp  Server.h  ServerClient.cpp  ServerClient.h
src/main/service/MongooseServer/HTTP/: HTTPRequest.h  HTTPRequestHandler.cpp  HTTPRequestHandler.h
src/main/service/SharedServerAPI/: SharedServerAPI.cpp  SharedServerAPI.h
src/main/src/: AppInitializer.cpp
src/main/src/exception/: ChatException.cpp  InvalidChatParticipants.cpp  JobException.cpp  SkillException.cpp
src/main/src/model/: Chat.cpp  Education.cpp  Friends.cpp  Geolocalization.cpp  Image.cpp  Job.cpp  JobPosition.cpp  Recomendation.cpp  Recommendation.cpp  Skill.cpp  User.cpp  UserActivity.cpp
src/main/src/service/Access/: AccessLog.cpp  AccessToken.cpp
src/main/src/service/DB/: DB.cpp  DBManager.cpp
src/main/src/service/ExternLogin/: FacebookAPI.cpp
src/main/src/service/Firebase/: FirebaseClient.cpp
src/main/src/service/HTTP/: HTTPRequestHandler.cpp
src/main/src/service/Handlers/: ChatHandler.cpp  DefaultHandler.cpp  FriendHandler.cpp  GeolocalizationHandler.cpp  HelloWorldJsonHandler.cpp  ImagesHandler.cpp  LoginHandler.cpp  RecommendationHandler.cpp  SearchHandler.cpp  SharedServerHandler.cpp  UserHandler.cpp
src/main/src/service/Indexer/: UsersIndexer.cpp
src/main/src/service/Logger/: Logger.cpp
src/main/src/service/Objects/: Job.cpp  Skill.cpp  User.cpp
src/main/src/service/Search/: ElasticClient.cpp
src/main/src/service/Server/: Server.cpp  ServerClient.cpp
src/main/src/service/SharedServerAPI/: SharedServerAPI.cpp
src/main/src/settings/: SettingManager.cpp
src/main/src/utils/: DateUtils.cpp  ErrorMessage.cpp  GeoUtils.cpp  JSONUtils.cpp  PathUtils.cpp  StringUtils.cpp  ThreatUtils.cpp  TokenUtils.cpp  VectorUtils.cpp
src/test/: DummyTests.cpp  UtilsTest.cpp  UtilsTest.h  test_main.cpp
src/test/gtest/make/: sample1_unittest
src/test/headers/: AccessTokenTest.h  DBTest.h  HTTPHandlerTests.h  ServerClienteAPITest.h  SettingManagerTest.h  TestHelper.h  UtilsTest.h
src/test/headers/modeltest/: ChatTest.h  EducationTest.h  GeolocalizationTests.h  ImageTest.h  JobPositionTest.h  JobTest.h  RecommendationTest.h  SkillTest.h  UserActivityTest.h  UserTest.h
src/test/src/: AccessTokenTest.cpp  DBTest.cpp  HTTPHandlerTests.cpp  ServerClienteAPITest.cpp  SettingManagerTest.cpp  TestHelper.cpp  UtilsTest.cpp  mainTests.cpp
src/test/src/modeltest/: ChatTest.cpp  EducationTest.cpp  GeolocalizationTests.cpp  ImageTest.cpp  JobPositionTest.cpp  JobTest.cpp  RecommendationTest.cpp  SkillTest.cpp  UserActivityTest.cpp  UserTest.cpp
(+3 files in other folders)
